<resources>
    <string name="app_name">CoxinhaDroid</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="sign_in_confirm_txt">Acessar</string>
    <string name="sign_in_sign_up_txt">Nao possui uma conta? Registre-se agora!</string>
    <string name="sign_in_hint_email">Email</string>
    <string name="sign_in_hint_password">Senha</string>
    <string name="sign_in_toast_invalid_email">Email invalido</string>
    <string name="sign_in_toast_short_password">Senha curta ou vazia</string>
    <string name="sign_in_toast_invalid_email_password">Email ou senha invalidos</string>
    <string name="sign_up_hint_name">Seu nome</string>
    <string name="sign_up_hint_email">Seu email</string>
    <string name="sign_up_hint_password">Sua senha</string>
    <string name="sign_up_hint_phone">(88) 9 9988-7766</string>
    <string name="sign_up_confirm_btn">Cadastre-me!</string>
    <string name="sign_up_toast_something_wrong">Algo de errado nao deu certo D:</string>
    <string name="coxinha_flavor">Sabor da coxinha</string>
    <string name="coxinha_description">Descriçao da coxinha</string>
    <string name="cadastra_coxinha">Cadastra coxinha</string>
    <string name="coxinha_price">R$ 0.0</string>
</resources>
