<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_coxinha"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.com.interaje.felipe.coxinhadroid.activities.AddCoxinhaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal"
        android:weightSum="2">

        <EditText
            android:id="@+id/coxinha_flavor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.6"
            android:hint="@string/coxinha_flavor" />

        <EditText
            android:id="@+id/coxinha_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:hint="@string/coxinha_price"
            android:inputType="number" />

    </LinearLayout>

    <EditText
        android:id="@+id/coxinha_description"
        android:lines="3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:hint="@string/coxinha_description" />

    <Button
        android:layout_marginTop="48dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="registerCoxinha"
        android:gravity="center"
        android:text="@string/cadastra_coxinha" />

</LinearLayout>
