<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.interaje.felipe.coxinhadroid.activities.SignInActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:hint="@string/sign_in_hint_email"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="158dp"
        android:id="@+id/sign_in_email" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/sign_in_hint_password"
        android:layout_below="@+id/sign_in_email"
        android:layout_alignLeft="@+id/sign_in_email"
        android:layout_alignStart="@+id/sign_in_email"
        android:layout_marginTop="38dp"
        android:id="@+id/sign_in_password" />

    <Button
        android:text="@string/sign_in_confirm_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_in_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:onClick="signInBtn"
        android:id="@+id/sign_in_confirm" />

    <TextView
        android:text="@string/sign_in_sign_up_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:onClick="signUpBtn"
        android:id="@+id/sign_in_sign_up_txt" />
</RelativeLayout>
